<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/college_name"
        android:id="@+id/college_name"
        android:textColor="@color/design_default_color_error"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_x="2dp"
        android:layout_y="40dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/college_address"
        android:id="@+id/college_address"
        android:textColor="@color/design_default_color_error"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_x="2dp"
        android:layout_y="80dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/lblUsername"
        android:text="@string/username"
        android:layout_x="10dp"
        android:layout_y="140dp"
        />
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/txtUsername"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:autofillHints="username"
        android:layout_x="80dp"
        android:layout_y="140dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/lblPassword"
        android:text="@string/password"
        android:layout_x="10dp"
        android:layout_y="180dp"
        />
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_width="280dp"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_x="80dp"
        android:layout_y="180dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/btnLogin"
        android:layout_gravity="center_horizontal"
        android:layout_x="140dp"
        android:layout_y="220dp"/>
</AbsoluteLayout>