<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/college_name"
        android:id="@+id/college_name"
        android:textColor="@color/design_default_color_error"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/college_address"
        android:id="@+id/college_address"
        android:textColor="@color/design_default_color_error"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblUsername"
            android:text="@string/username"
            />
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUsername"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:autofillHints="username"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblPassword"
            android:text="@string/password"
            />
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPassword"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:autofillHints="password"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/btnLogin"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
