<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/college_name"
        android:id="@+id/college_name"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/college_address"
        android:id="@+id/college_address"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/college_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/lblUsername"
        android:text="@string/username"
        app:layout_constraintTop_toBottomOf="@+id/college_address"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/txtUsername"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:autofillHints="username"
        app:layout_constraintStart_toEndOf="@+id/lblUsername"
        app:layout_constraintLeft_toRightOf="@+id/lblUsername"
        app:layout_constraintTop_toBottomOf="@+id/college_address"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/lblPassword"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/lblUsername"
        app:layout_constraintRight_toLeftOf="@id/txtPassword"/>
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/txtPassword"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintStart_toEndOf="@+id/lblPassword"
        app:layout_constraintLeft_toRightOf="@+id/lblPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/btnLogin"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>
</androidx.constraintlayout.widget.ConstraintLayout>