<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblCollegeName"
        android:text="@string/college_name"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/blue"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblAddress"
        android:text="@string/college_address"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_below="@id/lblCollegeName"
        android:textSize="20sp"
        android:textColor="@color/blue"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblUsername"
        android:text="@string/username"
        android:layout_below="@id/lblAddress"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textColor="@color/blue"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lblUsername"
        android:layout_below="@id/lblAddress"
        android:layout_marginStart="20dp"
        android:layout_alignBaseline="@id/lblUsername"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/username_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblPassword"
        android:text="@string/password"
        android:layout_below="@id/lblUsername"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textColor="@color/blue"
        />
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_toEndOf="@id/lblPassword"
        android:layout_marginStart="20dp"
        android:layout_alignBaseline="@id/lblPassword"
        android:importantForAutofill="no"
        />

</RelativeLayout>