<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/light_black">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Result"
        android:textColor="@color/blue"
        android:background="@drawable/textview_border"
        android:textSize="25sp"
        android:padding="20dp"
        android:gravity="center"
        android:fontFamily="serif"
        android:layout_margin="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/principal"
            android:textSize="20sp"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:width="96dp"
            />
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/txtPrincipal"
            android:hint="@string/principal_hint"
            android:editable="false"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:width="96dp"
            />
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/txtTime"
            android:hint="@string/time_hint"
            android:editable="false"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textSize="20sp"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:width="96dp"
            />
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/txtRate"
            android:hint="@string/rate_hint"
            android:editable="false"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:id="@+id/result"
            android:layout_gravity="center_horizontal"
            android:fontFamily="serif"
            />

    </LinearLayout>
</LinearLayout>